[package]
name = "personal-website-3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63" } # 0.5.0-rc.1

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "serve", "handlebars_templates", "uuid", "helmet"]
